--- a/BinaryTargets/OpenTelemetryApi.xcframework/Info.plist
+++ b/BinaryTargets/OpenTelemetryApi.xcframework/Info.plist
@@ -8,13 +8,12 @@
 			<key>BinaryPath</key>
 			<string>OpenTelemetryApi.framework/OpenTelemetryApi</string>
 			<key>LibraryIdentifier</key>
-			<string>ios-arm64_arm64e</string>
+			<string>ios-arm64</string>
 			<key>LibraryPath</key>
 			<string>OpenTelemetryApi.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
-				<string>arm64e</string>
 			</array>
 			<key>SupportedPlatform</key>
 			<string>ios</string>
